Add the "Source location of item" section to the mirador widget and allow for the input to submit items to be persisted.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@ $logo-image: image-url('dvl_logo.png') !default;
 @import 'blacklight';
 @import 'spotlight';
 @import 'modules/header';
+@import 'blocks/mirador_block';
 
 .mirador-embed-wrapper {
   height: 60vh;
