setup basic styling seam to modify bootstrap variables (also adds logo)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,12 @@
 *= require openseadragon
 */
 
+// Override before importing Blacklight
+$logo-image: image-url('dvl_logo.png') !default;
+
 @import 'blacklight';
 @import 'spotlight';
+@import 'modules/header';
 
 .mirador-embed-wrapper {
   height: 60vh;
