--- a/app/assets/stylesheets/spotlight.scss
+++ b/app/assets/stylesheets/spotlight.scss
@@ -1,7 +1,8 @@
 /*
 *= require bootstrap-tagsinput
 */
-@import 'spotlight/variables_bootstrap';
+
+@import 'variables';
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'sir-trevor/main';
