Add blacklight-hierarchy plugin

--- a/app/assets/stylesheets/blacklight.scss
+++ b/app/assets/stylesheets/blacklight.scss
@@ -3,3 +3,14 @@
 @import 'bootstrap';
 
 @import 'blacklight/blacklight';
+@import 'blacklight/hierarchy/hierarchy';
+
+#facets {
+  ul.facet-hierarchy {
+    padding-left: 15px;
+    margin-left: 0;
+    .twiddle {
+      cursor: pointer;
+    }
+  }
+}
