--- a/app/views/spotlight/sir_trevor/blocks/_mirador_block.html.erb
+++ b/app/views/spotlight/sir_trevor/blocks/_mirador_block.html.erb
@@ -1,16 +1,6 @@
 <div class="st__content-block st__content-block--mirador">
   <h3><%= mirador_block.heading %></h3>
-  <div><%= mirador_block.text %></div>
-  <% if mirador_block.items.present? %>
-    I would be a mirador instance with the following manifests:
-    <ul>
-      <% mirador_block.items.each do |item| %>
-        <li><%= item['iiif_manifest_url'] %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <div><%= mirador_block.caption %></div>
-  <div><%= mirador_block.mirador_config %></div>
+  <p><%= mirador_block.text %></p>
 
   <iframe
       src="<%= mirador_index_path(
@@ -25,5 +15,11 @@
       width="100%"
     ></iframe>
 
+  <p class="text-center">
+    <em><%= mirador_block.caption %></em>
+  </p>
 
+  <% if mirador_block.mirador_config.present? %>
+    <pre style="display:none;"><%= JSON.pretty_generate(JSON.parse(mirador_block.mirador_config)) %></pre>
+  <% end %>
 </div>
