add updated mirador_rails gem to open inner mirador instance to manipulation

--- a/app/views/mirador/index.html.erb
+++ b/app/views/mirador/index.html.erb
@@ -2,4 +2,5 @@
 <%= javascript_include_tag "mirador_bundle" %>
 
 <%= mirador_tag(:height => "100%",
+                :instance_name => "viewerInstance",
                 :options => @options.present? ? JSON.parse(@options) : mirador_options(@manifest, @canvas)) %>
