--- a/app/views/catalog/_show_manuscript.html.erb
+++ b/app/views/catalog/_show_manuscript.html.erb
@@ -22,4 +22,14 @@
       <% end -%>
     <% end -%>
   </dl>
+
+  <h2 class="col-md-7"><%= t('.administrative_title') %></h2>
+  <dl class="dl-horizontal dl-invert">
+    <% document_show_fields(document).select { |_, field| field.section == :administrative }.each do |field_name, field| -%>
+      <% if should_render_show_field? document, field %>
+        <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
+        <dd class="blacklight-<%= field_name.parameterize %>"><%= doc_presenter.field_value field_name %></dd>
+      <% end -%>
+    <% end -%>
+  </dl>
 </div>
