This enables mirador to create and persist a config.
Perhaps not the best way, but something that works for now.

--- a/app/assets/stylesheets/blocks/mirador_block.scss
+++ b/app/assets/stylesheets/blocks/mirador_block.scss
@@ -7,3 +7,11 @@
     width: auto;
   }
 }
+
+.modal-dialog.mirador-modal {
+  width: 90%;
+  .modal-body {
+    height: calc(100vh - 190px);
+    overflow-y: scroll;
+  }
+}
