--- a/app/views/catalog/_show_manuscript.html.erb
+++ b/app/views/catalog/_show_manuscript.html.erb
@@ -32,3 +32,8 @@
     <% end -%>
   </dl>
 </div>
+<button type='button' class='btn btn-default btn-details hidden' data-toggle='collapse' data-target='#metadataDetails' aria-expanded='false' aria-controls='metadataDetails'>
+  <span class='btn-text-show'><%= t('.show_details') %></span>
+  <span class='btn-text-hide hidden'><%= t('.hide_details') %></span>
+  <span class='btn-caret caret-down'>&gt;&gt;</span>
+</button>
