Update styling of MSS show page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@ $logo-image: image-url('dvl_logo.png') !default;
 
 @import 'blacklight';
 @import 'spotlight';
+@import 'vatican_library_theme';
 @import 'modules/header';
 @import 'blocks/mirador_block';
 @import 'modules/metadata_details_btn';
