--- a/app/views/catalog/_parts_default.html.erb
+++ b/app/views/catalog/_parts_default.html.erb
@@ -1,5 +1,5 @@
 <% if document.parts.any? %>
-  <div class="col-md-12">
+  <div class="col-md-12 parts-section">
     <h2><%= t('.title') %></h2>
     <% document.parts.each do |part| %>
       <div class="part col-md-12">
