for annotation show pages, navigate to the canvas in Mirador instance

--- a/app/views/catalog/_viewer_default.html.erb
+++ b/app/views/catalog/_viewer_default.html.erb
@@ -1,7 +1,8 @@
 <% if document.manifest %>
   <iframe
       src="<%= mirador_index_path(
-        manifest: document.manifest
+        manifest: document.manifest,
+        canvas: document.canvas
       ) %>"
       allowfullscreen="true"
       class="mirador-embed-wrapper"
