--- a/app/views/catalog/_show_manuscript.html.erb
+++ b/app/views/catalog/_show_manuscript.html.erb
@@ -32,8 +32,8 @@
     <% end -%>
   </dl>
 </div>
-<button type='button' class='btn btn-default btn-details hidden' data-toggle='collapse' data-target='#metadataDetails' aria-expanded='false' aria-controls='metadataDetails'>
+<button type='button' class='btn btn-sm btn-default btn-details hidden' data-toggle='collapse' data-target='#metadataDetails' aria-expanded='false' aria-controls='metadataDetails'>
   <span class='btn-text-show'><%= t('.show_details') %></span>
   <span class='btn-text-hide'><%= t('.hide_details') %></span>
-  <span class='btn-caret'>&gt;&gt;</span>
+  <span class='btn-caret'>&raquo;</span>
 </button>
