Allow the add exhibit/iiif item input on the mirador widget to take up 100% width.

--- a/app/assets/stylesheets/blocks/mirador_block.scss
+++ b/app/assets/stylesheets/blocks/mirador_block.scss
@@ -8,6 +8,14 @@
   }
 }
 
+// 🧙‍♂️ https://stackoverflow.com/questions/23436430/bootstrap-3-input-group-100-width
+.form-inline {
+  .input-group-btn.load-iiif-item-button {
+    display: table-cell;
+    width: 1%;
+  }
+}
+
 .modal-dialog.mirador-modal {
   width: 90%;
   .modal-body {
