--- a/app/assets/stylesheets/modules/parts_section.scss
+++ b/app/assets/stylesheets/modules/parts_section.scss
@@ -1,5 +1,15 @@
 .parts-section {
   padding-left: 0;
+
+  [data-toggle="collapse"] {
+    &.collapsed .area-not-collapsed {
+      display: none;
+    }
+
+    &:not(.collapsed) .area-collapsed {
+      display: none;
+    }
+  }
 }
 
 .part {
