Add clearfix so that a height can be calculated for smooth collapse

--- a/app/views/catalog/_part_show_default.html.erb
+++ b/app/views/catalog/_part_show_default.html.erb
@@ -1,3 +1,3 @@
-<div id="part-show-<%= document.first('ms_locus_tesim').parameterize %>" class="collapse">
+<div id="part-show-<%= document.first('ms_locus_tesim').parameterize %>" class="collapse clearfix">
   <%= render_document_partial document, :show %>
 </div>
