--- a/app/views/catalog/_part_header_default.html.erb
+++ b/app/views/catalog/_part_header_default.html.erb
@@ -8,10 +8,10 @@
     <% end %>
     <span class="part-supplied-title"><%= show_presenter.field_value('ms_supplied_title_tesim') %></span>
     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#part-show-<%= document.first('ms_locus_tesim').parameterize %>" aria-expanded="false" aria-controls="part-show-<%= document.first('ms_locus_tesim').parameterize %>">
-      <span class="area-not-collapsed">
+      <span class="collapse-shown">
         <%= t('.hide_details') %>
       </span>
-      <span class="area-collapsed">
+      <span class="collapse-hidden">
         <%= t('.view_details') %>
       </span>
     </button>
