Consolidate SCSS imports in single file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,9 @@ $logo-image: image-url('dvl_logo.png') !default;
 
 @import 'blacklight';
 @import 'spotlight';
-@import 'vatican_library_theme';
+@import "modules/mixins";
+@import "modules/blacklight_overrides";
+@import "modules/parts_section";
 @import 'modules/header';
 @import 'blocks/mirador_block';
 @import 'modules/metadata_details_btn';
