Adjust heading font and sizes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@ $logo-image: image-url('dvl_logo.png') !default;
 @import 'modules/metadata_details_btn';
 @import 'modules/collapse';
 @import 'modules/site_home';
+@import 'modules/headings';
 
 .mirador-embed-wrapper {
   height: 60vh;
