--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -5,6 +5,9 @@ $font-family-sans-serif: "Source Sans Pro", "Arial Unicode MS", Helvetica, sans-
 $headings-font-family: "Source Sans Pro", "Arial Unicode MS", Helvetica, sans-serif;
 $heading-font-color: #3f3c30;
 
+$sidebar-link-color: $gray;
+$sidebar-link-background-color: $gray-lighter;
+
 // Bootstrap Overrides
 $navbar-inverse-bg: $vatican-blue;
 $navbar-inverse-link-active-bg: darken($vatican-blue, 5%);
