--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700);
+
 // Vatican Variables
 $vatican-blue: #1c315b;
+
+$font-family-sans-serif: "Source Sans Pro", "Arial Unicode MS", Helvetica, sans-serif;
+$headings-font-family: "Source Sans Pro", "Arial Unicode MS", Helvetica, sans-serif;
+$heading-font-color: #3f3c30;
+
+$sidebar-link-color: $gray;
+$sidebar-link-background-color: $gray-lighter;
 
 // Bootstrap Overrides
 $navbar-inverse-bg: $vatican-blue;
