--- a/app/views/catalog/_show_manuscript.html.erb
+++ b/app/views/catalog/_show_manuscript.html.erb
@@ -34,7 +34,7 @@
       </dl>
     <% end %>
   </div>
-  <button type='button' class='btn btn-sm btn-default btn-details hidden' data-toggle='collapse' data-target='#metadataDetails' aria-expanded='false' aria-controls='metadataDetails'>
+  <button type='button' class='btn btn-sm btn-primary btn-details hidden' data-toggle='collapse' data-target='#metadataDetails' aria-expanded='false' aria-controls='metadataDetails'>
     <span class='collapse-hidden'><%= t('.show_details') %></span>
     <span class='collapse-shown'><%= t('.hide_details') %></span>
     <span class='btn-caret'>&raquo;</span>
