--- a/app/assets/stylesheets/modules/parts_section.scss
+++ b/app/assets/stylesheets/modules/parts_section.scss
@@ -12,7 +12,9 @@
   }
 
   h3 {
+    color: $gray;
     font-size: 1em;
+    font-weight: 600;
     margin-bottom: 0;
     margin-top: $padding-base-vertical;
   }
