--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -25,3 +25,7 @@ $navbar-inverse-link-color: #d8d8d8;
 
 $breadcrumb-bg: transparent;
 $breadcrumb-padding-vertical: $padding-base-vertical;
+
+$footer-height: 135px;
+$footer-top-margin: 20px;
+$footer-mobile-adjustment: 40px;
