Add footer strings to 'en' locale file

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,15 +3,15 @@
     <div class="row">
       <div class="col-md-5 copyright">
         <span class="copyright-heading">
-          Copyright © Vatican Library
+          <%= t('footer.copyright_heading') %>
         </span>
         <span class="copyright-text">
-          All rights reserved. The contents of this site are protected by copyright. Neither the text nor the images may be reproduced, in any form, without the authorisation of the Vatican Library, 00120, Vatican City.
+          <%= t('footer.copyright_text') %>
         </span>
     </div>
       <div class="col-xs-6 col-md-3 col-md-offset-1 partners">
         <span class="partner-heading">
-          In partnership with
+          <%= t('footer.partnership_heading') %>
         </span>
         <span class="stanford">
           <a href="https://library.stanford.edu/">
@@ -21,12 +21,12 @@
       </div>
       <div class="col-xs-6 col-md-3 partners">
         <span class="partner-heading">
-          Project supported by
+          <%= t('footer.project_support_heading') %>
         </span>
         <span class="mellon">
           <a href="https://mellon.org/">
             <span class="mellon-text">
-              The Andrew W. Mellon Foundation
+              <%= t('footer.project_support_text') %>
             </span>
             <%= image_tag("mellon-logo-home-white.png", class: "mellon-logo", height: "55", alt: "") %>
           </a>
