--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -3,6 +3,7 @@
 // Vatican Variables
 $vatican-blue: #1c315b;
 $vatican-blue-alternate: #286090;
+$vatican-blue-lighter: rgba(28, 49, 91, .1);
 
 $base-background-color: #f7f7f7;
 
