Override per-page dropdown link color to match theme

--- a/app/assets/stylesheets/modules/blacklight_overrides.scss
+++ b/app/assets/stylesheets/modules/blacklight_overrides.scss
@@ -56,6 +56,10 @@ body {
   padding: $padding-base-vertical 0;
 }
 
+#per_page-dropdown .dropdown-toggle {
+  color: $default-link-color;
+}
+
 .breadcrumb {
   border-bottom: 1px solid $navbar-inverse-link-color;
   border-radius: 0;
