--- a/app/assets/stylesheets/blocks/mirador_block.scss
+++ b/app/assets/stylesheets/blocks/mirador_block.scss
@@ -27,3 +27,26 @@
 .configure-mirador-button {
   margin-top: 40px;
 }
+
+.iiif-loading-alert {
+    padding: 0;
+}
+
+.loading-indicator {
+    width: 40px;
+    animation-name: spin;
+    animation-duration: 2000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    // should be good for all supported browsers:
+    // https://caniuse.com/#feat=css-animation
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
