import rather than 'require' bootstrap-tagsinput sass

--- a/app/assets/stylesheets/spotlight.scss
+++ b/app/assets/stylesheets/spotlight.scss
@@ -1,8 +1,5 @@
-/*
-*= require bootstrap-tagsinput
-*/
-
 @import 'variables';
+@import 'bootstrap-tagsinput';
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'sir-trevor/main';
