--- a/app/assets/stylesheets/modules/spotlight_overrides.scss
+++ b/app/assets/stylesheets/modules/spotlight_overrides.scss
@@ -27,8 +27,8 @@ dd a {
 
 .btn-primary,
 .nav-pills > li.active > a {
-  background-color: $vatican-blue-alternate;
-  border-color: darken($vatican-blue-alternate, 5%);
+  background-color: darken($vatican-blue-alternate, 5%);
+  border-color: darken($vatican-blue-alternate, 10%);
 
   &:hover,
   &:active,
