--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -6,6 +6,7 @@ $vatican-blue-alternate: #286090;
 $vatican-blue-lighter: rgba(28, 49, 91, .1);
 
 $base-background-color: #f7f7f7;
+$gray-text-color: #494949;
 
 $danger-red-background: lighten($brand-danger, 35%);
 
