--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@ $logo-image: image-url('dvl_logo.png') !default;
 @import 'blacklight';
 @import 'spotlight';
 @import "modules/mixins";
+@import "modules/bootstrap_overrides";
 @import "modules/blacklight_overrides";
 @import "modules/spotlight_overrides";
 @import "modules/parts_section";
