Add alt text to logo images for better a11y

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
         </span>
         <span class="stanford">
           <a href="https://library.stanford.edu/">
-            <%= image_tag("StanfordLibraries-logo-whitetext.svg", height: "25", alt: "") %>
+            <%= image_tag("StanfordLibraries-logo-whitetext.svg", height: "25", alt: "logo for Stanford Libraries") %>
           </a>
         </span>
       </div>
@@ -28,7 +28,7 @@
             <span class="mellon-text">
               <%= t('footer.project_support_text') %>
             </span>
-            <%= image_tag("mellon-logo-home-white.png", class: "mellon-logo", height: "55", alt: "") %>
+            <%= image_tag("mellon-logo-home-white.png", class: "mellon-logo", height: "55", alt: "logo for The Andrew W. Mellon Foundation") %>
           </a>
         </span>
       </div>
