Add a separate author field for use with 'Parts of this Manuscript' header

--- a/app/views/catalog/_part_header_default.html.erb
+++ b/app/views/catalog/_part_header_default.html.erb
@@ -2,7 +2,7 @@
 <div class="part-header">
   <h3><%= show_presenter.field_value('ms_locus_tesim') %></h3>
   <p>
-    <span class="part-author"><%= show_presenter.field_value('ms_author_tesim') %></span>
+    <span class="part-author"><%= show_presenter.field_value('ms_author_header_tesim') %></span>
     <% if document['ms_author_date_tesim'].present? %>
       <span class="part-author-date"><%= show_presenter.field_value('ms_author_date_tesim') %>.</span>
     <% end %>
