--- a/app/views/spotlight/sir_trevor/blocks/_mirador_block.html.erb
+++ b/app/views/spotlight/sir_trevor/blocks/_mirador_block.html.erb
@@ -1,6 +1,6 @@
 <div class="st__content-block st__content-block--mirador">
   <h3><%= mirador_block.heading %></h3>
-  <p><%= mirador_block.text %></p>
+  <p><%= sir_trevor_markdown mirador_block.text %></p>
 
   <iframe
       src="<%= mirador_index_path(
